--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -287,3 +287,86 @@ form {
     margin-left: 5px;
 }
 
+/*ABRA SUA CONTA*/
+.abrir-conta {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.abrir-conta h1 {
+    color: #fa6900;
+    margin-bottom: 30px;
+    font-size: 2em;
+}
+
+.abrir-conta-imagens {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.abrir-conta-imagens img{
+    width: 40%;
+    padding: 10px;
+    border-radius: 20px 0 20px 0 ;
+}
+
+.abrir-conta-textos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0 10px 0;
+    width: 100%;
+}
+
+.abrir-conta-textos h2 {
+    color: #fa6900;
+}
+
+.texto-conta-pessoal,
+.texto-conta-empresarial {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10%;
+}
+
+.texto-conta-empresarial p,
+.texto-conta-pessoal p {
+    color: black;
+    padding: 10px;
+    font-size: 1.5em;
+}
+
+.texto-conta-empresarial input,
+.texto-conta-pessoal input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 40%;
+    height: 15px;
+    padding: 20px;
+}
+
+.texto-conta-empresarial button,
+.texto-conta-pessoal button {
+    height: 30px;
+    width: 50%;
+    color: white;
+    background-color: #fa6900;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 5px;
+}
+
+.texto-conta-empresarial button:hover,
+.texto-conta-pessoal button:hover {
+    background-color: #f38630;
+    margin-left: 5px;
+    transition: .3s ease-in;
+}
