--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -45,8 +45,8 @@ header h1, h2 {
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     margin: 5% auto 0 5%;
     max-width: 350px;
     max-height: 500px;
