--- a/Styles/style_internetbanking.css
+++ b/Styles/style_internetbanking.css
@@ -7,6 +7,7 @@
 /*CABEÇALHO*/
 header {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -16,30 +17,37 @@ header {
     gap: 20;
 }
 
+.nomeBanco {
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap:wrap;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+}
+
+.burger {
+    width: 30px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.close {
+    display: none;
+    cursor: pointer;
+}
 .nomeBanco h1 {
     color: white;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.363);
 }
 
-.logoff {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logoff a {
-    position: absolute;
-    right: 5%;
-    text-decoration: none;
+#boasVindas {
     color: white;
 }
 
-.logoff a:hover {
-    right: 4%;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.253);
-    color: rgb(100, 100, 100);
-    transition: .3s ease-in;
-}
 
 /*MENU ASIDE LATERAL*/
 body {
@@ -54,7 +62,14 @@ aside {
     flex-wrap: wrap;
     gap: 20;
     position: absolute;
-    left: 0;
+    left: -100;
+    opacity: 0;
+}
+
+aside.open {
+    left: 5%;
+    opacity: 1;
+    transition: .3s ease-in-out;
 }
 
 .navbar {
@@ -97,3 +112,14 @@ aside {
     width: 100%;
 }
 
+.logoffMobile {
+    display: none;
+}
+/*IFRAMES*/
+iframe {
+    display: none;
+    position: absolute;
+    right: 0;
+    width: 88vw;
+    height: 100vh;
+}
