--- a/Styles/style_internetbanking.css
+++ b/Styles/style_internetbanking.css
@@ -7,7 +7,6 @@
 /*CABEÇALHO*/
 header {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -44,6 +43,10 @@ header {
 .nomeBanco h1 {
     color: white;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.363);
+}
+
+.nomeBanco img {
+    cursor: pointer;
 }
 
 #boasVindas {
@@ -126,4 +129,25 @@ iframe {
     right: 0;
     width: 100vw;
     height: 100vh;
+}
+
+@media (max-width: 800px) {
+    .nomeBanco {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .nomeBanco h1 {
+        font-size: 1em;
+    }
+
+    #boasVindas {
+        text-align: center;
+        position: absolute;
+        bottom: 5%;
+        left: 35%;
+    }
 }
